--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework=debug
+spring.profiles.active=local
 
 #인메모리 DB를 사용. 다른 디비를 사용한다면 그것에 맞는 정보를 입력해주어야 한다.
 #HikariCP를 사용하고 커스터마이징한 프로퍼티를 사용한다면 url이 아닌 jdbc-url로 작성해야 자동설정이 된다.
